pc crashed, moving on

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/modules/bootstrap/dist/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/login.css')
+    link(rel='stylesheet', type='text/css', href='/modules/sweetalert2/dist/sweetalert2.min.css')
   body
     block content
