--- a/views/loginLayout.jade
+++ b/views/loginLayout.jade
@@ -4,8 +4,9 @@ html(lang='en')
     title= title
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
-    link(rel='stylesheet', type='text/css', href='/stylesheets/cubeSim.css', media='screen')
+    link(rel='stylesheet', href='/modules/bootstrap/dist/css/bootstrap.css')
     link(rel='stylesheet', type='text/css', href='/modules/sweetalert2/dist/sweetalert2.min.css')
+    link(rel='stylesheet', type='text/css', href='/stylesheets/cubeSim.css', media='screen')
     style.
       body {
       font-family: Monospace;
