--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,4 +7,5 @@ html
     link(rel='stylesheet', href='/stylesheets/login.css')
     link(rel='stylesheet', type='text/css', href='/modules/sweetalert2/dist/sweetalert2.min.css')
   body
+    script(src='/js/auth.js')
     block content
