--- a/views/leaderboards.jade
+++ b/views/leaderboards.jade
@@ -3,3 +3,32 @@ extends loginLayout
 block content
   h1= title
   p Welcome to #{title}
+  table.table
+    thead.thead-inverse
+      tr
+        th #
+        th First Name
+        th Last Name
+        th Username
+    tbody
+      tr
+        th(scope='row') 1
+        td Mark
+        td Otto
+        td @mdo
+      tr
+        th(scope='row') 2
+        td Jacob
+        td Thornton
+        td @fat
+      tr
+        th(scope='row') 3
+        td Larry
+        td the Bird
+        td @twitter
+      td(colspan='4').text-center ...
+      tr
+        th(scope='row') 3
+        td Larry
+        td the Bird
+        td @twitter
