--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,14 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/modules/bootstrap/dist/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/login.css')
+    link(rel='stylesheet', type='text/css', href='/stylesheets/cubeSim.css', media='screen')
     link(rel='stylesheet', type='text/css', href='/modules/sweetalert2/dist/sweetalert2.min.css')
-  body
+    link(rel='stylesheet', type='text/css', href='/modules/font-awesome/css/font-awesome.min.css')
+  body.background
     script(src='/js/auth.js')
+    script.
+      (function(){
+        if(auth.isLoggedIn())
+          window.location.href = "/puzzle";
+      })()
     block content
