--- a/views/login.jade
+++ b/views/login.jade
@@ -3,6 +3,11 @@ extends layout
 block content
   .container
     .row
+      .col-lg-12.text-center
+        h1= 'Cube-Sim '
+          i.fa.fa-cube
+      
+    .row
       .col-md-6.col-md-offset-3
         .panel.panel-login
           .panel-heading
