--- a/views/game.jade
+++ b/views/game.jade
@@ -33,7 +33,8 @@ html(lang='en')
     script(src='/js/cube-sim/corner.js')
     script(src='/js/cube-sim/edge.js')
     script(src='/js/cube-sim/coloredCube.js')
-    if type === 'Mirror333'
+    //- This puzzles extend the Cube333
+    if type === 'Mirror333' || type === 'Fisher333'
       script(src='/js/cube-sim/Cube333/cube333.js')
       script(src='/js/cube-sim/Cube333/cube333Visual.js')
       script(src='/js/cube-sim/Cube333/cube333Controller.js')
