square1 top spin

--- a/views/game.jade
+++ b/views/game.jade
@@ -44,7 +44,7 @@ html(lang='en')
     script.
       (function (){
         if(!auth.isLoggedIn())
-          window.location.href = "login";
+          window.location.href = "/login";
       })()
       var container, timer, timerHTML;
       var scrambled = false;
